welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:7: error: not found: value a
		if(a >= 60 && a<=90)
                   ^squirrelPlay:9: error: type mismatch;
 found   : Unit
 required: Boolean
			bool = true;
                             ^squirrelPlay:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if(a >= 60 && a<=90)
                ^squirrelPlay:14: error: not found: value a
		if(a >= 60 && a<=100)
                   ^squirrelPlay:16: error: type mismatch;
 found   : Unit
 required: Boolean
			bool = true;
                             ^squirrelPlay:14: error: type mismatch;
 found   : Unit
 required: Boolean
		if(a >= 60 && a<=100)
                ^